fix(armies-lists): Fix favorite parameter
